--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     parentNodes[i].addEventListener("click", function () {
                         var dataIdVal = $(this).data("id");
                         localStorage.setItem('myCrypto', dataIdVal);
-                        window.location.href = "Dashboard.html";
+                        window.location.href = "dashboard.html";
                     });
                 }
 
